jVTLlib/src/main/java/it/islandofcode/jvtllib/newparser/antlr/newVTLParser.java
// Generated from newVTL.g4 by ANTLR 4.6
package it.islandofcode.jvtllib.newparser.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class newVTLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, ASSIGN=4, MEMBER=5, MUL=6, DIV=7, PLUS=8, MINUS=9, 
		CONCAT=10, EQ=11, NE=12, LE=13, LT=14, GE=15, GT=16, AND=17, OR=18, XOR=19, 
		NOT=20, ISNULL=21, ISNOTNULL=22, WHEN=23, THEN=24, IN=25, AS=26, ERRCODE=27, 
		LPAR=28, RPAR=29, LBRA=30, RBRA=31, LSQR=32, RSQR=33, COMMA=34, COLON=35, 
		SCOL=36, AT=37, DIESIS=38, RESTRICT=39, GET=40, PUT=41, REGEXP=42, CHECK=43, 
		VALID=44, NVALID=45, ALL=46, CONDITION=47, MEASURES=48, JOIN=49, INNER=50, 
		LEFT=51, ON=52, KEEP=53, RENAME=54, FILTER=55, CALC=56, DROP=57, UNION=58, 
		INTERSECT=59, SYMDIFF=60, SETDIFF=61, NVL=62, IF=63, ELSEIF=64, ELSE=65, 
		INPUT=66, OUTPUT=67, ROUND=68, CEIL=69, FLOOR=70, ABS=71, EXP=72, LOGN=73, 
		LOG=74, POW=75, SQRT=76, NROOT=77, MOD=78, TRUNC=79, MIN=80, MAX=81, SUM=82, 
		AVG=83, GROPUBY=84, SUBSTR=85, REPLACE=86, STARTWITH=87, ROLE=88, IDENTIFIER=89, 
		MEASURE=90, ATTRIBUTE=91, DEFINE=92, DEFVAR=93, DEFVALUEDOM=94, DEFDATSTRUCT=95, 
		DEFDATASET=96, DATAPOINT=97, RULESET=98, HIERARCHICAL=99, MAPPING=100, 
		PROCEDURE=101, CREATE=102, FUNCTION=103, CALL=104, RETURN=105, NULLTYPE=106, 
		STRINGTYPE=107, INTTYPE=108, FLOATTYPE=109, BOOLTYPE=110, DATETYPE=111, 
		DATASET=112, DATE_LITERAL=113, INTEGER_LITERAL=114, STRING_LITERAL=115, 
		BOOLEAN_LITERAL=116, FLOAT_LITERAL=117, REG_IDENTIFIER=118, ESCAPED_IDENTIFIER=119, 
		WS=120, COMMENT=121, LINE_COMMENT=122;
	public static final int
		RULE_parse = 0, RULE_statement = 1, RULE_assignment = 2, RULE_expr = 3, 
		RULE_checkfunction = 4, RULE_checkParamEnum = 5, RULE_checkParamOpt = 6, 
		RULE_define = 7, RULE_dpruleset = 8, RULE_singlerule = 9, RULE_errorCode = 10, 
		RULE_getFunction = 11, RULE_putFunction = 12, RULE_clausefun = 13, RULE_clausebody = 14, 
		RULE_clausebodyparam = 15, RULE_clausebodycalc = 16, RULE_joinblock = 17, 
		RULE_setfun = 18, RULE_condOperator = 19, RULE_aggregationFun = 20, RULE_namedProcDef = 21, 
		RULE_procVarInList = 22, RULE_singleVarIn = 23, RULE_callProc = 24, RULE_namedFunDef = 25, 
		RULE_callFun = 26, RULE_injection = 27, RULE_debug = 28, RULE_varname = 29, 
		RULE_varmember = 30, RULE_variable = 31, RULE_dataType = 32, RULE_scalartype = 33, 
		RULE_nulltype = 34, RULE_booleantype = 35, RULE_datetype = 36, RULE_integertype = 37, 
		RULE_floattype = 38, RULE_stringtype = 39, RULE_literal = 40, RULE_nullLiteral = 41, 
		RULE_booleanLiteral = 42, RULE_dateLiteral = 43, RULE_integerLiteral = 44, 
		RULE_floatLiteral = 45, RULE_stringLiteral = 46, RULE_componentRole = 47, 
		RULE_aggregationOp = 48;
	public static final String[] ruleNames = {
		"parse", "statement", "assignment", "expr", "checkfunction", "checkParamEnum", 
		"checkParamOpt", "define", "dpruleset", "singlerule", "errorCode", "getFunction", 
		"putFunction", "clausefun", "clausebody", "clausebodyparam", "clausebodycalc", 
		"joinblock", "setfun", "condOperator", "aggregationFun", "namedProcDef", 
		"procVarInList", "singleVarIn", "callProc", "namedFunDef", "callFun", 
		"injection", "debug", "varname", "varmember", "variable", "dataType", 
		"scalartype", "nulltype", "booleantype", "datetype", "integertype", "floattype", 
		"stringtype", "literal", "nullLiteral", "booleanLiteral", "dateLiteral", 
		"integerLiteral", "floatLiteral", "stringLiteral", "componentRole", "aggregationOp"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'variable'", "'printvar'", "'nop'", "':='", "'.'", "'*'", "'/'", 
		"'+'", "'-'", "'||'", "'='", "'<>'", "'<='", "'<'", "'>='", "'>'", "'and'", 
		"'or'", "'xor'", "'not'", "'isnull'", "'is not null'", "'when'", "'then'", 
		"'in'", "'as'", "'errorcode'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
		"','", "':'", "';'", "'@'", "'#'", "'restrict'", "'get'", "'put'", "'regexp'", 
		"'check'", "'valid'", "'not valid'", "'all'", "'condition'", "'measures'", 
		"'join'", "'inner'", "'left'", "'on'", "'keep'", "'rename'", "'filter'", 
		"'calc'", "'drop'", "'union'", "'intersect'", "'symdiff'", "'setdiff'", 
		"'nvl'", "'if'", "'elseif'", "'else'", "'input'", "'output'", "'round'", 
		"'ceil'", "'floor'", "'abs'", "'exp'", "'ln'", "'log'", "'power'", "'sqrt'", 
		"'nroot'", "'mod'", "'trunc'", "'min'", "'max'", "'sum'", "'avg'", "'group by'", 
		"'substr'", "'replace'", "'startwith'", "'role'", null, null, null, "'define'", 
		"'defineVariable'", "'defineValueDomain'", "'defineDataStructure'", "'defineDataSet'", 
		"'datapoint'", "'ruleset'", "'hierarchical'", "'mapping'", "'procedure'", 
		"'create'", "'function'", "'call'", "'returns'", "'null'", "'string'", 
		"'integer'", "'float'", "'boolean'", "'date'", "'dataset'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, "ASSIGN", "MEMBER", "MUL", "DIV", "PLUS", "MINUS", 
		"CONCAT", "EQ", "NE", "LE", "LT", "GE", "GT", "AND", "OR", "XOR", "NOT", 
		"ISNULL", "ISNOTNULL", "WHEN", "THEN", "IN", "AS", "ERRCODE", "LPAR", 
		"RPAR", "LBRA", "RBRA", "LSQR", "RSQR", "COMMA", "COLON", "SCOL", "AT", 
		"DIESIS", "RESTRICT", "GET", "PUT", "REGEXP", "CHECK", "VALID", "NVALID", 
		"ALL", "CONDITION", "MEASURES", "JOIN", "INNER", "LEFT", "ON", "KEEP", 
		"RENAME", "FILTER", "CALC", "DROP", "UNION", "INTERSECT", "SYMDIFF", "SETDIFF", 
		"NVL", "IF", "ELSEIF", "ELSE", "INPUT", "OUTPUT", "ROUND", "CEIL", "FLOOR", 
		"ABS", "EXP", "LOGN", "LOG", "POW", "SQRT", "NROOT", "MOD", "TRUNC", "MIN", 
		"MAX", "SUM", "AVG", "GROPUBY", "SUBSTR", "REPLACE", "STARTWITH", "ROLE", 
		"IDENTIFIER", "MEASURE", "ATTRIBUTE", "DEFINE", "DEFVAR", "DEFVALUEDOM", 
		"DEFDATSTRUCT", "DEFDATASET", "DATAPOINT", "RULESET", "HIERARCHICAL", 
		"MAPPING", "PROCEDURE", "CREATE", "FUNCTION", "CALL", "RETURN", "NULLTYPE", 
		"STRINGTYPE", "INTTYPE", "FLOATTYPE", "BOOLTYPE", "DATETYPE", "DATASET", 
		"DATE_LITERAL", "INTEGER_LITERAL", "STRING_LITERAL", "BOOLEAN_LITERAL", 
		"FLOAT_LITERAL", "REG_IDENTIFIER", "ESCAPED_IDENTIFIER", "WS", "COMMENT", 
		"LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "newVTL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public newVTLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ParseContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(newVTLParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> SCOL() { return getTokens(newVTLParser.SCOL); }
		public TerminalNode SCOL(int i) {
			return getToken(newVTLParser.SCOL, i);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof newVTLVisitor ) return ((newVTLVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(98);
				statement();
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SCOL) {
					{
					setState(99);
					match(SCOL);
					}
				}

				}
				}
				setState(104); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << PUT))) != 0) || ((((_la - 92)) & ~0x3f) == 0 && ((1L << (_la - 92)) & ((1L << (DEFINE - 92)) | (1L << (CREATE - 92)) | (1L << (CALL - 92)) | (1L << (REG_IDENTIFIER - 92)) | (1L << (ESCAPED_IDENTIFIER - 92)))) != 0) );
			setState(106);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DefFunctionContext extends StatementContext {
		public NamedFunDefContext namedFunDef() {
			return getRuleContext(NamedFunDefContext.class,0);
		}
		public DefFunctionContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof newVTLVisitor ) return ((newVTLVisitor<? extends T>)visitor).visitDefFunction(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DebugstatementContext extends StatementContext {
		public DebugContext debug() {
			return getRuleContext(DebugContext.class,0);
		}
		public DebugstatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof newVTLVisitor ) return ((newVTLVisitor<? extends T>)visitor).visitDebugstatement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CallProcStatContext extends StatementContext {
		public CallProcContext callProc() {
			return getRuleContext(CallProcContext.class,0);
		}
		public CallProcStatContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof newVTLVisitor ) return ((newVTLVisitor<? extends T>)visitor).visitCallProcStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssingstatementContext extends StatementContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public AssingstatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof newVTLVisitor ) return ((newVTLVisitor<? extends T>)visitor).visitAssingstatement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DefinestatementContext extends StatementContext {
		public DefineContext define() {
			return getRuleContext(DefineContext.class,0);
		}
		public DefinestatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof newVTLVisitor ) return ((newVTLVisitor<? extends T>)visitor).visitDefinestatement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PutDataContext extends StatementContext {
		public PutFunctionContext putFunction() {
			return getRuleContext(PutFunctionContext.class,0);
		}
		public PutDataContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof newVTLVisitor ) return ((newVTLVisitor<? extends T>)visitor).visitPutData(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(114);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PUT:
				_localctx = new PutDataContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				putFunction();
				}
				break;
			case DEFINE:
				_localctx = new DefinestatementContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				define();
				}
				break;
			case CALL:
				_localctx = new CallProcStatContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(110);
				callProc();
				}
				break;
			case CREATE:
				_localctx = new DefFunctionContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(111);
				namedFunDef();
				}
				break;
			case REG_IDENTIFIER:
			case ESCAPED_IDENTIFIER:
				_localctx = new AssingstatementContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(112);
				assignment();
				}
				break;
			case T__1:
			case T__2:
				_localctx = new DebugstatementContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(113);
				debug();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public VarnameContext varname() {
			return getRuleContext(VarnameContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(newVTLParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
